--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
 VITE_API_BASE_URL=http://localhost:8525/api
-VITE_SWAGGER_URL=http://localhost:8525/api/v3/api-docs/default
+VITE_SWAGGER_URL=http://localhost:8525/api/v3/api-docs
